# Newspaper_intelligence

./: .gitignore  .opencode.json  CLAUDE.md  Makefile  README.md  agent-work.md
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml
.opencode/: ralph-history.json  ralph-loop.state.json
backend/: pyproject.toml  requirements-ml.txt  requirements.txt  test.db  test_main.db
backend/alembic/: env.py
backend/alembic/versions/: 0d56c4ff1fd8_add_user_api_key_model.py  184385609c27_add_users_table.py  22c8d210d95c_add_pages_processed_to_edition.py  2fdd719a3b5d_add_access_request_model.py  3f8c2d1b9a2a_add_story_groups.py  4a5b6c7d8e9f_add_advanced_layout_and_semantic_fields.py  51eba26c3c9a_initial_migration.py  88da348970ce_add_user_model.py  8f1c2a9b7e01_add_processing_archiving_fields.py  a3ab24c21056_add_structured_data_field_to_items.py  b1c2d3e4f5a6_add_intelligence_features.py  bd05b9fb1965_add_structured_classifieds_fields_to_.py  d165df953ed1_add_category_models.py  d91fb546012d_add_saved_searches_model.py
backend/app/: main.py  main_simple.py  schemas.py  settings.py
backend/app/api/: admin.py  analytics.py  auth.py  auth_routes.py  categories.py  collections.py  editions.py  export.py  external.py  favorites.py  items.py  processing.py  public.py  saved_searches.py  search.py  structured_export.py  users.py  webhooks.py
backend/app/cli/: archive_editions.py  backfill_story_groups.py
backend/app/db/: database.py
backend/app/models/: __init__.py
backend/app/services/: ad_detection_service.py  alerts_service.py  archive_service.py  auth_service.py  block_ocr_service.py  category_classifier.py  classifieds_intelligence.py  entity_extraction_service.py  gdrive_client.py  layout_analyzer.py  layout_assembler.py  layout_detection_service.py  layout_qa_service.py  ocr_service.py  onedrive_client.py  pdf_processor.py  processing_service.py  reading_order_service.py  salience_service.py  saved_search_service.py  seed_categories.py  seed_users.py  semantic_grouping_service.py  story_grouping.py  thread_service.py  topic_clustering_service.py  webhook_service.py
backend/app/utils/: auth.py
backend/tests/: __init__.py  conftest.py  test_archive_service.py  test_auth.py  test_external_api.py  test_main.py  test_processing_progress.py  test_webhooks.py
deploy/: DEPLOYMENT_CONTEXT.md  vhost.conf
deploy/google-drive/: README.md
deploy/onedrive/: README.md
deploy/openlitespeed/: README.md
deploy/systemd/: mag-newspaper-api.service  mag-newspaper-archive.service  mag-newspaper-archive.timer
docs/: INTELLIGENCE_UPGRADE_SUMMARY.md  PERMISSIONS_MATRIX.md  SETUP.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: .htaccess
frontend/src/: App.css  App.tsx  index.css
pipeline/: .gitignore  README.md  requirements.txt
pipeline/configs/: label_map.json  labels.txt  layout.yaml
pipeline/core/: __init__.py  continuation.py  geom.py  io.py  linking.py  ordering.py  schemas.py
pipeline/labelstudio/: label_config.xml
pipeline/scripts/: layout_infer.py  ls_to_coco.py  ocr_blocks.py  (+4 more)
scripts/: deploy.sh  ocr_accuracy_report.py  process_pdf_local.py
(+36 files in other folders)
